--- a/builder/files/pip.conf
+++ b/builder/files/pip.conf
@@ -1,4 +1,4 @@
 [global]
 index-url = https://pypi.org/simple
 # extra-index-url = https://pypi.org/simple
-trusted-host = pypi.org
+trusted-host = pypi.org files.pythonhosted.org
